News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/Object_Field_Update_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Generic object to object field mapping used to define various roll-ups or calculations.
Used to maintain parent level information on every child update.
Example:
Product configuration -&gt; Product Basket,
Product Basket -&gt; Sales Order</description>
    <label>CS Object Field Update Mapping</label>
    <pluralLabel>CS Object Field Update Mappings</pluralLabel>
</CustomObject>