News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Indicate the type of the action when assigning the field value from the source field to the destination field</description>
    <inlineHelpText>Indicates the type of the action that will be performed on source field when assigning the value to destination field.
Calculation action type supports only basic operators (+, -, /, *) and it doesn&#39;t support operator precedence!</inlineHelpText>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COPY</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>CONCATENATE</fullName>
            </value>
            <value>
                <fullName>CALCULATE</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>