News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Is mapping active (used) or not.</description>
    <inlineHelpText>Is mapping active (used) or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>