News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Short explanation of mapping scenario.</description>
    <inlineHelpText>Short explanation of mapping scenario.</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>