News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Destination_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Field_API_Name__c</fullName>
    <description>The API name of the field that the new value will be assigned to</description>
    <inlineHelpText>The API name of the field that the new value will be assigned to</inlineHelpText>
    <label>Destination Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>