News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Destination_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Object_API_Name__c</fullName>
    <description>The API name of the destination object that the new field values will be assigned to</description>
    <inlineHelpText>The API name of the destination object that the new field values will be assigned to.
Example: Account, Opportunity, cscfga__Product_Configuration__c, cscfga__Product_Basket__c, csmso__Sales_Order__c</inlineHelpText>
    <label>Destination Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>