News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Relationship_field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_field_API_Name__c</fullName>
    <description>API name of the field that links source and destination objects.
Example:
Source object = cscfga__Product_Basket__c
Destination object = csmso__Sales_Order__c
Relationship field = csmso__Sales_Order__c (field from the cscfga__Product_Basket__c)</description>
    <inlineHelpText>API name of the field that links source and destination objects.
Example:
Source object = cscfga__Product_Basket__c
Destination object = csmso__Sales_Order__c
Relationship field = csmso__Sales_Order__c (field from the cscfga__Product_Basket__c)</inlineHelpText>
    <label>Relationship field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>