News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Separator__c.field-meta.xml
<CustomField>
    <fullName>Separator__c</fullName>
    <description>Separator to be used together with Action Type: CONCATENATE
Leading and trailing spaces will be removed so use word &quot;space&quot; if they are needed.
Example: space|space will be interpreted as &#39; | &#39; (single quotes used to show leading/trailing spaces)</description>
    <inlineHelpText>Separator to be used together with Action Type: CONCATENATE
Leading and trailing spaces will be removed so use word &quot;space&quot; if they are needed.
Example: space|space will be interpreted as &#39; | &#39; (single quotes used to show leading/trailing spaces)</inlineHelpText>
    <label>Separator</label>
    <length>20</length>
    <type>Text</type>
</CustomField>