News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API_Name__c</fullName>
    <description>The API name of the field that data will be read from.
When using CALCULATE action use this field to define calculation.
Example: csmso__Total_Price__c - One_Off_Price__c</description>
    <inlineHelpText>The API name of the field that data will be read from.
When using CALCULATE action use this field to define calculation.
Example: csmso__Total_Price__c - One_Off_Price__c</inlineHelpText>
    <label>Source Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>