News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/fields/Source_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Object_API_Name__c</fullName>
    <description>The API name of the source object that the new field values will be read from.
Example: Account, Opportunity, cscfga__Product_Configuration__c, cscfga__Product_Basket__c, csmso__Sales_Order__c</description>
    <inlineHelpText>The API name of the source object that the new field values will be read from.
Example: Account, Opportunity, cscfga__Product_Configuration__c, cscfga__Product_Basket__c, csmso__Sales_Order__c</inlineHelpText>
    <label>Source Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>