News UAT/force-app/main/default/objects/Object_Field_Update_Mapping__mdt/listViews/All_Mapping_Details.listView-meta.xml
<ListView>
    <fullName>All_Mapping_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Destination_Object_API_Name__c</columns>
    <columns>Relationship_field_API_Name__c</columns>
    <columns>Source_Field_API_Name__c</columns>
    <columns>Destination_Field_API_Name__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Filter__c</columns>
    <columns>Separator__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Mapping Details</label>
</ListView>